Scrolling visual bug on mobile.

--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ body,ul,li,h1,h2,a{
     .mainNav{
         top: 0;
         left: 0;
+        bottom: 0;
         width: 175px;
         height: 100%;
         display: flex;
